--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
   <meta name="description" content="初音未来版本的通过点击/触摸播放声音并出现变化图案的互动内容。">
-  <title>Mikutap</title>
+  <title>Hikitap(试作)</title>
   <link rel="apple-touch-icon" href="icon.png">
   <link href="css/css.css" rel="stylesheet">
   <link charset="UTF-8" href="shared/sp/css/common.css" rel="stylesheet">
@@ -22,7 +22,7 @@
 <body>
   <div id="view"></div>
   <div id="scene_top">
-    <h1>Mikutap</h1>
+    <h1>Hikitap(test)</h1>
     <div id="ng">
       <p class="atten">十分抱歉<br>您的浏览器并不支持本页面需要的特性</p>
     </div>
@@ -34,7 +34,7 @@
       <p class="attention">※请打开声音并享受。</p>
     </div>
      <div class="ok">
-     <p class="tit"><strong>注意！搬运内容，原页面(Origin Site): <a href="https://aidn.jp/mikutap">https://aidn.jp/mikutap</a></strong></p>
+     <p class="tit"><strong>Origin Site: <a href="https://miku.sci-fifans.net">https://miku.sci-fifans.net</a></strong></p>
     </div>
   </div>
   <div id="scene_loading">
@@ -50,8 +50,8 @@
   <div id="about">
     <div id="about_in">
       <p class="close"><span id="bt_close">×</span></p>
-      <p class="con"> 声音来源 <a href="https://ec.crypton.co.jp/pages/prod/vocaloid/mikuv4x" target="_blank">Hatsune Miku</a> </p>
-      <p class="con"> 作者 <a href="https://aidn.jp" target="_blank">daniwell</a> (<a href="https://twitter.com/daniwell_aidn" target="_blank">twitter</a>) </p>
+      <p class="con"> 声音来源 <a href="https://www.bilibili.com/video/BV1CvYDeoEXt/?spm_id_from=333.999.0.0&vd_source=d57422089b7044207e263f1e7c2a752b" target="_blank">Hiki utauOC</a> </p>
+      <p class="con"> 原作者 <a href="https://aidn.jp" target="_blank">daniwell</a> (<a href="https://twitter.com/daniwell_aidn" target="_blank">twitter</a>) </p>
       <p class="link"> 灵感来源 <a href="http://patatap.com/" target="_blank">Patatap</a><br>(令人赞叹的网页!)</p>
     </div>
   </div>
